# dexlib-rs

./: .gitignore  Cargo.toml  README.md  TODO.md
src/: error.rs  lib.rs
src/dex/: annotations.rs  classes.rs  fields.rs  internal.rs  methods.rs  mod.rs  section.rs  strings.rs  utils.rs
src/dex/classes/: iter.rs
src/dex/methods/: code.rs  exceptions.rs  implementation.rs
src/dex/traits/: mod.rs
src/raw/: annotations.rs  class_data.rs  classdef.rs  code_item.rs  encoded_value.rs  flags.rs  header.rs  hiddenapi.rs  map_list.rs  method_handle.rs  mod.rs  simple.rs  string.rs  type_list.rs
src/raw/encoded_value/: annotation.rs  catch_handler.rs  catch_handlers.rs  values.rs
src/types/: header.rs  mod.rs
src/utils/: leb128.rs  mod.rs  nohash.rs  set.rs
tests/: mod.rs
