[package]
name = "dexlib"
version = "0.1.0"
edition = "2021"

[dependencies]
scroll = { version = "0.11.0", features = ["derive"] }
cesu8 = "1.1.0"
thiserror = "1.0"
adler32 = "1.2.0"
once_cell = "1.17"
num-traits = "0.2"
num-derive = "0.3"
derivative = "2.2.0"
paste = "1.0"
dashmap = "5.4.0"
bitflags = "2.1.0"
